--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/Arg-4.0/media/monitor.png">
+    <link rel="icon" href="media/monitor.png">
     <title>Proyecto Final - Gaston Emanuel Pensa</title>
 </head>
 <body>
