--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </h2>
             <div class="about-content">
                 <div class="column-left">
-                    <img src="media/messi.jpg" alt="Photo of Gaston">
+                    <img src="media/gaston-pensa.jpg" alt="Photo of Gaston">
                 </div>
                 <div class="column-right">
                     <div class="text">
@@ -59,7 +59,7 @@
                    </div>
                    <p>During my years of experience in different areas, I managed to acquire something very important to me: Knowledge. This will be with me the rest of my life, and will provide me the tools needed to make through everyday situations.</p>
                    <p>Learning new technologies every day.</p>
-                   <a href="/Arg-4.0/media/Gaston-Pensa-CV.pdf" download="" class="download">Download CV</a>
+                   <a href="media/Gaston-Pensa-CV.pdf" download="" class="download">Download CV</a>
                 </div>
             </div>
         </div>
