Cambio las descripciones de las Project Cards

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <img src="media/black-ink.PNG" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">Black Ink Tattoo</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eaque.</p>
+                            <p class="card-text">A Web Site for a Tattoo shop-store. Made it at CoderHouse Full Stack Developer career.</p>
                             <a href="https://gastonpensa.github.io/Proyecto-Final/index.html" target="_blank" class="btn btn-primary">Let's see it</a>
                             </div>
                         </div> 
@@ -85,7 +85,7 @@
                             <img src="media/documentation.PNG" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">JS Documentation</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eaque.</p>
+                            <p class="card-text">Technical documentation page made in the Front-end Developer course in freeCodeCamp</p>
                             <a href="https://codepen.io/GastonPensa/full/rNKZxbY" target="_blank" class="btn btn-primary">Let's see it</a>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                             <img src="media/form.PNG" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">freeCodeCamp Form</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eaque.</p>
+                            <p class="card-text">This is an inscription form made in the Front-end Developer course in freeCodeCamp</p>
                             <a href="https://codepen.io/GastonPensa/full/rNKZxgY" target="_blank" class="btn btn-primary">Let's see it</a>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                             <img src="media/tribute.PNG" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">ACDC Tribute</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eaque.</p>
+                            <p class="card-text">I've created this site dedicated to the hard rock band ACDC made in the Front-end Developer course in freeCodeCamp</p>
                             <a href="https://codepen.io/GastonPensa/full/XWYPXLV" target="_blank" class="btn btn-primary">Let's see it</a>
                             </div>
                         </div>
