correción de media querys para project card

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </div>
                         <div class="card" style="width: 20rem;">
                             <img src="media/form.PNG" class="card-img-top" alt="...">
-                            <div class="card-body">
+                            <div class="card-body" id="card-form">
                             <h5 class="card-title">freeCodeCamp Form</h5>
                             <p class="card-text">This is an inscription form made in the Front-end Developer course in freeCodeCamp</p>
                             <a href="https://codepen.io/GastonPensa/full/rNKZxgY" target="_blank" class="btn btn-primary">Let's see it</a>
