Modificación nombre de pestaña

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="media/monitor.png">
-    <title>Proyecto Final - Gaston Emanuel Pensa</title>
+    <title>Portfolio - Gaston Emanuel Pensa</title>
 </head>
 <body>
     <!-- Navbar -->
